group module api swagger api for group module
