# src/v1/routes/group.js
@@ -1,0 +1,11 @@
+const express = require("express");
+const { verifyToken } = require("../middleware/auth");
+const router = express.Router();
+const { GroupService } = require("../services");
+
+router.post("/", verifyToken, GroupService.createGroup);
+router.get("/", verifyToken, GroupService.getAllGroup);
+router.get("/:groupId", verifyToken, GroupService.getGroupById);
+router.delete("/:groupId", verifyToken, GroupService.deleteGroup);
+
+module.exports = router;
